# framepack-serverless

./: .gitignore  Dockerfile  README.md  demo_gradio.py  pyproject.toml  rp_handler.py  runpod.dockerfile  serverless.py  studio.py  test_input.json
.devcontainer/: compose.yml  devcontainer.json  init.sh  install-dev-tools.sh
.github/workflows/: build.yml  production.yml
diffusers_helper/: lora_utils.py
diffusers_helper/models/: hunyuan_video_packed.py
docker/: compose.dev.yml  compose.runpod.yml
local_types/: runpod_job.py
modules/: interface.py  lora_manager.py  settings.py  toolbox_app.py
modules/generators/: base_generator.py  video_base_generator.py
modules/pipelines/: worker.py
modules/toolbox/: setup_ffmpeg.py  toolbox_processor.py
utils/: args.py  crypto.py  image.py  logging.py  rp_upload.py  startup.py  uploader.py
