[project]
name = "framepack"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "~=3.10"

dependencies = [
    "accelerate==1.6.0",
    "av==12.1.0",
    "diffusers==0.33.1",
    "einops>=0.8.1",
    "gradio>=5.23.0",
    "numpy==1.26.2",
    "opencv-contrib-python>=4.11.0.86",
    "pillow==11.1.0",
    "requests>=2.32.3",
    "safetensors>=0.5.3",
    "scipy==1.12.0",
    "sentencepiece==0.2.0",
    "setuptools>=78.1.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchsde==0.2.6",
    "torchvision>=0.21.0",
    "transformers==4.46.2",
]

[project.optional-dependencies]
sage = [
    "sageattention==1.0.6",
]
#sage2 = [
#    "sageattention",
#]
flash = [
    "flash-attn>=2.7.4.post1",
]
xformers = [
    "xformers>=0.0.29.post3",
]
runpod = [
    "runpod>=1.7.9",
]

[tool.uv]
no-build-isolation-package = [
    "sageattention",
    "xformers",
    "flash-attn",
]

#conflicts = [
#    [
#      { extra = "sage" },
#      { extra = "sage2" },
#    ],
#]

[tool.uv.sources]
#sageattention = [
#    { git = "https://github.com/thu-ml/SageAttention", extra = "sage2" },
#]